some adjustments made

--- a/html-css/week1/index.html
+++ b/html-css/week1/index.html
@@ -15,7 +15,12 @@
   <body>
     <nav class="nav-header">
       <div class="profile-pic">
-        <img src="dog.jpg" width="200px" alt="profile picture" />
+        <a href="https://placeholder.com"
+          ><img
+            src="https://images.pexels.com/photos/3009441/pexels-photo-3009441.jpeg?cs=srgb&dl=selective-focus-photo-of-a-short-coated-white-and-black-3009441.jpg&fm=jpg"
+            width="200px"
+            alt="profile-pic"
+        /></a>
       </div>
       <div class="contacts">
         <ul class="address">
@@ -80,6 +85,18 @@
     <!--education and training-->
     <h2 class="edu">Education and training</h2>
     <div class="education">
+      <p>March 2020 - present</p>
+      <ul class="HYF">
+        <h4>HackYourFuture(HYF)</h4>
+        <li>HTML/CSS + CLI (3weeks)</li>
+        <li>JavaScript1 + GIT(3 weeks)</li>
+        <li>JavaScript2 + GIT(3 weeks)</li>
+        <li>JavaScript3 + GIT(3 weeks)</li>
+        <li>Database(3 weeks)</li>
+        <li>NODE.js(5 weeks)</li>
+        <li>React(5 weeks)</li>
+        <li>Final Project(7 weeks)</li>
+      </ul>
       <p>2015 - 2019</p>
       <ul class="certification">
         <li>Certificate in Network Essentials</li>
@@ -131,5 +148,14 @@
         </ul>
       </div>
     </div>
+    <h2>Resources/References</h2>
+    <div class="resource">
+      <ul class="reference">
+        <li>Head first html and css 2nd edition</li>
+        <li><a href="https://www.w3schools.com/">w3schools</a></li>
+        <li><a href="https://www.freecodecamp.org/">freecodecamp.org</a></li>
+        <li>YouTube</li>
+      </ul>
+    <div>
   </body>
 </html>
