--- a/html-css/week2/index.html
+++ b/html-css/week2/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="hack YourFuture week 1 assignment" />
     <meta name="keywords" content="web design" />
     <meta name="author" content="Daxious Wendemu" />
-    <title>Resume Web Design | Welcome</title>
+    <title>Web Design | Welcome</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
