week 2 assignment , some correction made

--- a/html-css/week2/index.html
+++ b/html-css/week2/index.html
@@ -82,9 +82,7 @@
       <div class="gallery">
         <h3>The Gallery</h3>
         <br />
-        <p>
-          Images to the right should be added as links. Each image should be
-          responsive.
+        <p>Images to the right should be added as liks.Each image should be responsive.
         </p>
       </div>
       <div class="logotypes">
