week 2 assignment uploaded again
uploaded everything cause some of the pictures are not displaying

--- a/html-css/week2/index.html
+++ b/html-css/week2/index.html
@@ -82,7 +82,9 @@
       <div class="gallery">
         <h3>The Gallery</h3>
         <br />
-        <p>Images to the right should be added as liks.Each image should be responsive.
+        <p>
+          Images to the right should be added as liks.Each image should be
+          responsive.
         </p>
       </div>
       <div class="logotypes">
@@ -96,7 +98,7 @@
           <a href=""><img src="images/logo6.png" /></a>
           <a href=""><img src="images/slack.png" /></a>
           <a href=""><img src="images/spotify.png" /></a>
-          <a href=""><img src="images/Browser.png" /></a>
+          <a href=""><img src="images/pinterest.png" /></a>
           <a href=""><img src="images/apple.png" /></a>
           <a href=""><img src="images/instagram.png" /></a>
           <a href=""><img src="images/linkedin.png" /></a>
