--- a/html-css/week3/contact.html
+++ b/html-css/week3/contact.html
@@ -22,7 +22,7 @@
           </div>
 
           <ul class="nav-menu">
-            <li><a href="forms.html">About</a></li>
+            <li class="link-d"><a href="forms.html">About</a></li>
             <li class="link-a"><a href="#">Contact</a></li>
             <li class="link-b"><a href="preference.html">Preference</a></li>
             <li class="link-c"><a href="payment.html">Payment</a></li>
