--- a/html-css/week3/forms.html
+++ b/html-css/week3/forms.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charse="utf-8" />
-    <meta name="viewport" content="width=device-width, intial-scale=1.0>
+    <meta
+      name="viewport"
+      content="width=device-width, intial-scale=1.0, maximum-scale=1.0 /"
+    />
     <meta name="description" content="hack YourFuture week 3 assignment" />
     <meta name="keywords" content="web design" />
     <meta name="author" content="Daxious Wendemu" />
@@ -18,7 +21,7 @@
           </div>
 
           <ul class="nav-menu">
-            <li><a href="#">About</a></li>
+            <li class="link-d"><a href="#">About</a></li>
             <li class="link-a"><a href="contact.html">Contact</a></li>
             <li class="link-b"><a href="preference.html">Preference</a></li>
             <li class="link-c"><a href="payment.html">Payment</a></li>
