--- a/html-css/week3/preference.html
+++ b/html-css/week3/preference.html
@@ -12,6 +12,8 @@
     <title>Form Design| Welcome</title>
     <link rel="stylesheet" href="form-style.css" />
     <style>
+    
+    /* some styling for the preference(form 3) */
       form .clothing,
       .fashion,
       .bags {
@@ -41,6 +43,7 @@
         margin-left: 190px;
       }
     </style>
+
   </head>
 
   <body>
@@ -52,7 +55,7 @@
           </div>
 
           <ul class="nav-menu">
-            <li><a href="forms.html">About</a></li>
+            <li class="link-d"><a href="forms.html">About</a></li>
             <li class="link-a"><a href="contact.html">Contact</a></li>
             <li class="link-b"><a href="#">Preference</a></li>
             <li class="link-c"><a href="payment.html">Payment</a></li>
