--- a/javascript/javascript3/week1/weather/index.html
+++ b/javascript/javascript3/week1/weather/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Weather Forecast</h1>
     <input type="text" id="userinput" placeholder="Enter city name" />
-    <button id="button1">SEARCH</button>
+    <button type="submit" id="submit1">SUBMIT</button>
 
     <p id="temperature"></p>
     <p id="windSpeed"></p>
